syntax = "proto3";
package auth;
option go_package = "./auth";
import "google/api/annotations.proto";

message IsAdminRequest {
    string jwtToken = 1;
}

message IsAdminResponse {
    bool isAdmin = 1;
}

message RegistrationRequest {
    string username = 1;
    string password = 2;
    int64  roleId = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string key = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (AuthResponse) {
        option (google.api.http) = {
            get: "/auth/login"
        };
    }
    rpc Registration(RegistrationRequest) returns (AuthResponse) {
        option (google.api.http) = {
            get: "/auth/registration"
        };
    }
    rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse) {
        option (google.api.http) = {
            get: "/auth/IsAdmin"
        };
    }
}
